# test-app-python-poetry

./: .gitlab-ci.yml  README.md  pyproject.toml
.cid/: state-github.json  state-gitlab.json
.github/workflows/: cid-main.yml  cid-nightly.yml  cid-pull-request.yml  cid-release.yml
test_app_python_poetry/: cli.py
tests/: test_calculator.py
